--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,5 +1,7 @@
 body {
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-size: 14px;
 }
 
 main {
@@ -31,5 +33,5 @@ td:not(:first-child) {
 
 th,
 td {
-  padding: 2px 8px;
+  padding: 1px 6px;
 }
